                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd HEAD

  - Fixed code that prevented GCC 2.95 to compile ngIRCd.
  - Adjust path names in manual pages according to "./configure" settings.

ngIRCd 0.10.2 (2007-06-08)

  ngIRCd 0.10.2-pre2 (2007-05-19)
  - Server links are allowed to use larger write buffers now (up to 50 KB).

  ngIRCd 0.10.2-pre1 (2007-05-05)
  - Fix compressed server links (broken since 0.10.0).
  - Predefined Channel configuration now allows specification of channel key
    (mode k) and maximum user count (mode l).
  - When using epoll() IO interface, compile in the select() interface as
    well and fall back to it when epoll() isn't available on runtime.
  - New configure option "--without-select" to disable select() IO API
    (even when using epoll(), see above).
  - Added support for IO APIs "poll()" and "/dev/poll".
  - Reorganized internal handling of invite and ban lists.

ngIRCd 0.10.1 (2006-12-17)

  - Fixed validation of server names containing digits.
  - Update the "info text" of the local server after re-reading configuration.
  - Changed Numerics 265 and 266 to follow ircd 2.11.x "standards".
  - Allow PASS syntax defined in RFC 1459 for server links, too.
  - Enhanced ISUPPORT message (005 numeric).
  - New configuration option "PredefChannelsOnly": if set, clients can only
    join predefined channels.
  - Code cleanups: use "LogDebug(...)" instead of "Log(LOG_DEBUG, ...)", use
    "strcspn()", unsigned vs. signed, use "const", fix whitespaces, ...

ngIRCd 0.10.0 (2006-10-01)

  - Fixed file handle leak when daemon is not able to send MOTD to a client.

  ngIRCd 0.10.0-pre2 (2006-09-09)
  - Fixed build problems with GCC option -fstack-protector.
  - Minor documentation updates.

  ngIRCd 0.10.0-pre1 (2006-08-02)